force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Attempting</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Demo No Show</fullName>
            </value>
            <value>
                <fullName>Demo Completed - Not Qualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Retouch - Did Not Connect</fullName>
            </value>
            <value>
                <fullName>Retouch - Confirmed No Opportunity</fullName>
                <label>Connected-Disqualified</label>
            </value>
            <value>
                <fullName>Send Small Fleet Link</fullName>
            </value>
            <value>
                <fullName>Small Fleet Link Sent</fullName>
            </value>
            <value>
                <fullName>Inactive - See Parent Account</fullName>
            </value>
            <value>
                <fullName>Small Fleet Link Failed - Invalid Email</fullName>
            </value>
            <value>
                <fullName>Small Fleet Link Pending - Manual Review</fullName>
            </value>
            <value>
                <fullName>Faulty Lead</fullName>
            </value>
            <value>
                <fullName>Do Not Contact - Open Conversation</fullName>
            </value>
            <value>
                <fullName>Contact Established</fullName>
                <isActive>false</isActive>
                <label>Contact Established</label>
            </value>
            <value>
                <fullName>Create Webstore Opportunity</fullName>
                <isActive>false</isActive>
                <label>Create Webstore Opportunity</label>
            </value>
            <value>
                <fullName>Delete Account</fullName>
                <isActive>false</isActive>
                <label>Delete Account</label>
            </value>
            <value>
                <fullName>Delete Contact Only</fullName>
                <isActive>false</isActive>
                <label>Delete Contact Only</label>
            </value>
            <value>
                <fullName>GDPR Delete</fullName>
                <isActive>false</isActive>
                <label>GDPR Delete</label>
            </value>
            <value>
                <fullName>Inactive - No Longer There</fullName>
                <isActive>false</isActive>
                <label>Inactive - No Longer There</label>
            </value>
            <value>
                <fullName>Multiple Campaign Interactions</fullName>
                <isActive>false</isActive>
                <label>Multiple Campaign Interactions</label>
            </value>
            <value>
                <fullName>No Authority</fullName>
                <isActive>false</isActive>
                <label>No Authority</label>
            </value>
            <value>
                <fullName>Opt out - Do not contact</fullName>
                <isActive>false</isActive>
                <label>Opt out - Do not contact</label>
            </value>
            <value>
                <fullName>Webstore Opportunity Created</fullName>
                <isActive>false</isActive>
                <label>Webstore Opportunity Created</label>
            </value>
            <value>
                <fullName>Webstore Opportunity Creation In Progress</fullName>
                <isActive>false</isActive>
                <label>Webstore Opportunity Creation In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>