force-app/main/default/objects/Contact/fields/Support_Case_Related__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked when the contact is created by the Support team when a customer calls and their information does not exist in Salesforce.</description>
    <label>Support Case Related</label>
    <type>Checkbox</type>
</CustomField>