force-app/main/default/objects/Contact/fields/Support_Priority__c.field-meta.xml
<CustomField>
    <fullName>Support_Priority__c</fullName>
    <formula>Account.Support_Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Priority</label>
    <type>Text</type>
</CustomField>