force-app/main/default/objects/Contact/fields/TILBP__TI_Email__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TI_Email__c</fullName>
    <label>TI Email</label>
    <type>Email</type>
</CustomField>