force-app/main/default/objects/Contact/fields/TILBP__TI_Ref9__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TI_Ref9__c</fullName>
    <label>TI Ref9</label>
    <length>255</length>
    <type>Text</type>
</CustomField>