force-app/main/default/objects/Contact/fields/TILBP__TIID__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TIID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TI ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>