force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>CASE(Account.BillingState,&apos;Alabama&apos;,&apos;CST&apos;, 
&apos;Alaska&apos;,&apos;AKST&apos;, 
&apos;Arizona&apos;,&apos;MST&apos;, 
&apos;Arkansas&apos;,&apos;CST&apos;, 
&apos;California&apos;,&apos;PST&apos;, 
&apos;Colorado&apos;,&apos;MST&apos;, 
&apos;Connecticut&apos;,&apos;EST&apos;, 
&apos;Delaware&apos;,&apos;EST&apos;, 
&apos;District of Columbia&apos;,&apos;EST&apos;,
&apos;Florida&apos;,&apos;EST&apos;, 
&apos;Georgia&apos;,&apos;EST&apos;, 
&apos;Hawaii&apos;,&apos;HST&apos;, 
&apos;Idaho&apos;,&apos;MST&apos;, 
&apos;Illinois&apos;,&apos;CST&apos;, 
&apos;Indiana&apos;,&apos;EST&apos;, 
&apos;Iowa&apos;,&apos;CST&apos;, 
&apos;Kansas&apos;,&apos;CST&apos;, 
&apos;Kentucky&apos;,&apos;CST&apos;, 
&apos;Louisiana&apos;,&apos;CST&apos;, 
&apos;Maine&apos;,&apos;EST&apos;, 
&apos;Maryland&apos;,&apos;EST&apos;, 
&apos;Massachusetts&apos;,&apos;EST&apos;, 
&apos;Michigan&apos;,&apos;EST&apos;, 
&apos;Minnesota&apos;,&apos;CST&apos;, 
&apos;Mississippi&apos;,&apos;CST&apos;, 
&apos;Missouri&apos;,&apos;CST&apos;, 
&apos;Montana&apos;,&apos;MST&apos;, 
&apos;Nebraska&apos;,&apos;CST&apos;, 
&apos;Nevada&apos;,&apos;PST&apos;, 
&apos;New Hampshire&apos;,&apos;EST&apos;, 
&apos;New Jersey&apos;,&apos;EST&apos;, 
&apos;New Mexico&apos;,&apos;MST&apos;, 
&apos;New York&apos;,&apos;EST&apos;, 
&apos;North Carolina&apos;,&apos;EST&apos;, 
&apos;North Dakota&apos;,&apos;CST&apos;, 
&apos;Ohio&apos;,&apos;EST&apos;, 
&apos;Oklahoma&apos;,&apos;CST&apos;, 
&apos;Oregon&apos;,&apos;PST&apos;, 
&apos;Pennsylvania&apos;,&apos;EST&apos;, 
&apos;Rhode Island&apos;,&apos;EST&apos;, 
&apos;South Carolina&apos;,&apos;EST&apos;, 
&apos;South Dakota&apos;,&apos;CST&apos;, 
&apos;Tennessee&apos;,&apos;CST&apos;, 
&apos;Texas&apos;,&apos;CST&apos;, 
&apos;Utah&apos;,&apos;MST&apos;, 
&apos;Vermont&apos;,&apos;EST&apos;, 
&apos;Virginia&apos;,&apos;EST&apos;, 
&apos;Washington&apos;,&apos;PST&apos;, 
&apos;West Virginia&apos;,&apos;EST&apos;, 
&apos;Wisconsin&apos;,&apos;CST&apos;, 
&apos;Wyoming&apos;,&apos;MST&apos;,
&apos;Alberta&apos;,&apos;MST&apos;,
&apos;British Columbia&apos;,&apos;MST&apos;,
&apos;Manitoba&apos;,&apos;CST&apos;,
&apos;New Brunswick&apos;,&apos;AST&apos;,
&apos;Newfoundland and Labrador&apos;,&apos;AST&apos;,
&apos;Northwest Territories&apos;,&apos;MST&apos;,
&apos;Nova Scotia&apos;,&apos;AST&apos;,
&apos;Nunavut&apos;,&apos;EST&apos;,
&apos;Ontario&apos;,&apos;EST&apos;,
&apos;Prince Edward Island&apos;,&apos;AST&apos;,
&apos;Quebec&apos;,&apos;EST&apos;,
&apos;Saskatchewan&apos;,&apos;CST&apos;,
&apos;Yukon Territories&apos;,&apos;PST&apos;,
&apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>