force-app/main/default/objects/Contact/fields/Unload_Account__c.field-meta.xml
<CustomField>
    <fullName>Unload_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unload Account</label>
    <type>Checkbox</type>
</CustomField>