force-app/main/default/objects/Contact/fields/UserGem__PastContactRelationship__c.field-meta.xml
<CustomField>
    <fullName>UserGem__PastContactRelationship__c</fullName>
    <formula>UserGem__PastInfos__r.UserGem__PastContactRelationship__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UG - Past Contact Relationship</label>
    <type>Text</type>
</CustomField>