force-app/main/default/objects/Contact/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>utm parameter for campaign name</description>
    <label>utm_campaign</label>
    <type>TextArea</type>
</CustomField>