force-app/main/default/objects/Contact/fields/utm_campaign_append__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign_append__c</fullName>
    <label>utm campaign append</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>