force-app/main/default/objects/Contact/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>utm_content info for a campaign</description>
    <label>utm_content</label>
    <type>TextArea</type>
</CustomField>