force-app/main/default/objects/Contact/fields/utm_content_append__c.field-meta.xml
<CustomField>
    <fullName>utm_content_append__c</fullName>
    <label>utm content append</label>
    <length>255</length>
    <type>Text</type>
</CustomField>