force-app/main/default/objects/Contact/fields/utm_creative__c.field-meta.xml
<CustomField>
    <fullName>utm_creative__c</fullName>
    <label>utm creative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>