force-app/main/default/objects/Contact/fields/utm_device__c.field-meta.xml
<CustomField>
    <fullName>utm_device__c</fullName>
    <label>utm device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>