force-app/main/default/objects/Contact/fields/utm_ext_ad_id__c.field-meta.xml
<CustomField>
    <fullName>utm_ext_ad_id__c</fullName>
    <description>Id of the external ad (e.g Facebook ad id, AdWords ad id, etc).</description>
    <label>utm_ext_ad_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>