force-app/main/default/objects/Contact/fields/utm_extensionid__c.field-meta.xml
<CustomField>
    <fullName>utm_extensionid__c</fullName>
    <label>utm extensionid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>