force-app/main/default/objects/Contact/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>utm_medium for a campaign</description>
    <label>utm_medium</label>
    <type>TextArea</type>
</CustomField>