force-app/main/default/objects/Contact/fields/utm_network__c.field-meta.xml
<CustomField>
    <fullName>utm_network__c</fullName>
    <label>utm network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>