force-app/main/default/objects/Contact/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>utm_source for marketing campaigns</description>
    <label>utm_source</label>
    <type>TextArea</type>
</CustomField>