force-app/main/default/objects/Contact/fields/utm_source_append__c.field-meta.xml
<CustomField>
    <fullName>utm_source_append__c</fullName>
    <description>Used to append the utm source field on contacts.</description>
    <label>utm source append</label>
    <length>255</length>
    <type>Text</type>
</CustomField>