force-app/main/default/objects/Contact/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>utm_term for marketing campaigns</description>
    <label>utm_term</label>
    <type>TextArea</type>
</CustomField>