force-app/main/default/objects/Contact/fields/utm_term_append__c.field-meta.xml
<CustomField>
    <fullName>utm_term_append__c</fullName>
    <label>utm term append</label>
    <length>255</length>
    <type>Text</type>
</CustomField>