force-app/main/default/objects/Contact/fields/Validated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Validated_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if validates box is checked, contact has validated information and marketing runs campaigns on them.</description>
    <label>Validated Contact</label>
    <type>Checkbox</type>
</CustomField>