force-app/main/default/objects/Contact/recordTypes/Connected_Worker.recordType-meta.xml
<RecordType>
    <fullName>Connected_Worker</fullName>
    <active>true</active>
    <description>Connected Worker Contact</description>
    <label>Connected Worker</label>
</RecordType>