force-app/main/default/objects/Contact/recordTypes/Fleet.recordType-meta.xml
<RecordType>
    <fullName>Fleet</fullName>
    <active>true</active>
    <description>Fleet contact</description>
    <label>Fleet</label>
</RecordType>