force-app/main/default/objects/Contact/recordTypes/Industrial.recordType-meta.xml
<RecordType>
    <fullName>Industrial</fullName>
    <active>true</active>
    <description>Industrial Contact. Allows us to create intentional dupes for fleet and industrial contacts.</description>
    <label>Industrial</label>
</RecordType>