force-app/main/default/objects/Contact/recordTypes/Machine_Vision.recordType-meta.xml
<RecordType>
    <fullName>Machine_Vision</fullName>
    <active>true</active>
    <label>Machine Vision</label>
</RecordType>