force-app/main/default/objects/Contact/recordTypes/PSA_Resource.recordType-meta.xml
<RecordType>
    <fullName>PSA_Resource</fullName>
    <active>true</active>
    <label>PSA Resource</label>
</RecordType>