force-app/main/default/objects/Contact/validationRules/Changing_Contact_Status_to_Demo_Schedule.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Contact_Status_to_Demo_Schedule</fullName>
    <active>true</active>
    <description>You cannot move the Contact Status to Demo Scheduled without inserting a Date in the Scheduled Demo Date Field</description>
    <errorConditionFormula>AND(ISCHANGED(Status__c),
ISPICKVAL(Status__c, &apos;Demo Scheduled&apos;), 
    ISBLANK(Scheduled_Demo_Date__c),
    CONTAINS(Owner.UserRole.Name, &apos;SMB&apos;), 
    ISBLANK(ADR_Transfer_By__c), 
    ISBLANK(Hot_Transfer_To__c), 
    OR(ISPICKVAL(Source__c, &apos;List Import (no prior engagement)&apos;), 
    ISPICKVAL(Source__c, &apos;Outbound call / email / linkedin&apos;)))</errorConditionFormula>
    <errorMessage>You cannot move the Contact Status to Demo Scheduled without inserting a Date in the Scheduled Demo</errorMessage>
</ValidationRule>