force-app/main/default/objects/Contact/validationRules/NetsuiteBot_Cannot_change_Contact_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>NetsuiteBot_Cannot_change_Contact_Email</fullName>
    <active>false</active>
    <description>Netsuite Bot cannot update Contact Email</description>
    <errorConditionFormula>ISCHANGED(Email) &amp;&amp; $User.FirstName = &quot;Netsuite&quot; &amp;&amp; $User.LastName= &quot;Bot&quot;</errorConditionFormula>
    <errorMessage>Netsuite Bot cannot change the Contact Email</errorMessage>
</ValidationRule>