force-app/main/default/objects/Contact/validationRules/Require_Inbound_Reason_Faulty.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Inbound_Reason_Faulty</fullName>
    <active>true</active>
    <description>This Validation rule is to Make  Inbound_Reason_Faulty_c  a required field when “Faulty Lead” is selected as Contact Status</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Faulty Lead&quot;),
    ISBLANK(TEXT(Inbound_Reason_Faulty__c))
       
)</errorConditionFormula>
    <errorMessage>Inbound Reason Faulty cannot be blank if contact status is selected as Faulty Lead</errorMessage>
</ValidationRule>