force-app/main/default/objects/Contact/validationRules/SFDC_Robot_Cannot_Change_the_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>SFDC_Robot_Cannot_Change_the_Account</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(AccountId) &amp;&amp; $User.FirstName = &quot;SFDC&quot; &amp;&amp; $User.LastName= &quot;Robot&quot;</errorConditionFormula>
    <errorMessage>SFDC Robot cannot change the account name!</errorMessage>
</ValidationRule>