force-app/main/default/objects/Contact/listViews/AD_existing_clients1.listView-meta.xml
<ListView>
    <fullName>AD_existing_clients1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Account.Last_Contacted__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>X18_digit_Contact_ID__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>Account.Account_Status_Updated__c</field>
        <operation>equals</operation>
        <value>existing customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Alex</value>
    </filters>
    <filters>
        <field>Account.Account_Lifetime_ACV__c</field>
        <operation>greaterThan</operation>
        <value>CAD 1</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Dwyer</value>
    </filters>
    <label>AD existing clients</label>
</ListView>