force-app/main/default/objects/Contact/listViews/Admin_Copy_of_Phelps_Contact.listView-meta.xml
<ListView>
    <fullName>Admin_Copy_of_Phelps_Contact</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Account.Number_of_Citizens__c</columns>
    <columns>Number_of_Vehicles_from_Account__c</columns>
    <columns>Account.Account_Assignment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Status__c</field>
        <operation>contains</operation>
        <value>assigned,attempting,contact established,closed lost</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Fleet</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mharp</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>council,director,city manager,administrator,superintendent,mayor,town manager,chief,deputy,exec,select,chair,controller,president,vp,facilities,treasurer</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>fire,police,sheriff,recycling,streets,battalion,fleet,transportation,maintenance</value>
    </filters>
    <label>Admin Copy of Phelps - Contact</label>
    <sharedTo>
        <group>AE_Sales_Team</group>
    </sharedTo>
</ListView>