force-app/main/default/objects/Contact/listViews/AE1_Custom_List_Foundation.listView-meta.xml
<ListView>
    <fullName>AE1_Custom_List_Foundation</fullName>
    <columns>Account.Account_Assignment_Date__c</columns>
    <columns>Account.Last_Contacted__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Account.Last_Marketing_Engagement_Date__c</columns>
    <columns>Last_Call__c</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Owner_Name__c</field>
        <operation>equals</operation>
        <value>Timothy Duong,Mohammad Zoubi,Timothy Burns</value>
    </filters>
    <label>AE1 Custom List Foundation</label>
</ListView>