force-app/main/default/objects/Contact/listViews/AE_Contacts_Mobile_ListView.listView-meta.xml
<ListView>
    <fullName>AE_Contacts_Mobile_ListView</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Hashtag__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Contacts</label>
</ListView>