force-app/main/default/objects/Contact/listViews/Alex_existing_clients.listView-meta.xml
<ListView>
    <fullName>Alex_existing_clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Account.Last_Contacted__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>X18_digit_Contact_ID__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
    </filters>
    <filters>
        <field>Account.Account_Status_Updated__c</field>
        <operation>equals</operation>
        <value>existing customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Alex</value>
    </filters>
    <filters>
        <field>ACCOUNT.OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Pagola</value>
    </filters>
    <label>Alex existing clients</label>
</ListView>