force-app/main/default/objects/Contact/listViews/Alex_Salesloft_Import.listView-meta.xml
<ListView>
    <fullName>Alex_Salesloft_Import</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Number_of_Calls_by_Current_Owner__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>X18_digit_Contact_ID__c</columns>
    <filterScope>Mine</filterScope>
    <label>MD Contact list</label>
</ListView>