force-app/main/default/objects/Contact/listViews/all2.listView-meta.xml
<ListView>
    <fullName>all2</fullName>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Last_Marketing_Engagement_Date__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Account.Last_Contacted__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Status__c</columns>
    <columns>Account.Geography__c</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>Last_Call__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Account.Lifetime_Purchases__c</columns>
    <filterScope>Mine</filterScope>
    <label>Danielle Sexton - contacts</label>
</ListView>