force-app/main/default/objects/Contact/listViews/All_Contacts_in_Account.listView-meta.xml
<ListView>
    <fullName>All_Contacts_in_Account</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Call__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Account.Closed_Lost_Opportunities__c</columns>
    <columns>Account.Last_Marketing_Engagement_Date__c</columns>
    <columns>Last_Marketing_Engagement_Date__c</columns>
    <columns>Marketo_mkto_trk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ADR_Assignment__c</field>
        <operation>equals</operation>
        <value>corrie hill</value>
    </filters>
    <label>All Contacts in Account</label>
</ListView>