force-app/main/default/objects/Contact/listViews/Andrew_Vazquez_Salesloft_Engage.listView-meta.xml
<ListView>
    <fullName>Andrew_Vazquez_Salesloft_Engage</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>(Andrew Vazquez) Salesloft -&gt; Engage</label>
</ListView>